--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 
+# dotenv file
+
+.env
+
+
+
+# Mac OS artifacts
+
+.DS_Store
+
+
+
+# NPM dependencies
+
+node_modules
+
+
+
+# Yarn 2 files
+
+.yarn/*
+
+!.yarn/cache
+
+!.yarn/patches
+
+!.yarn/plugins
+
+!.yarn/releases
+
+!.yarn/sdks
+
+!.yarn/versions
